<resources>
    <string name="app_name">CryptoCompare</string>
    <string name="login_title">Masuk</string>
    <string name="button_login_google">Masuk dengan Google</string>
    <string name="button_login_facebook">Masuk dengan Facebook</string>
    <string name="hint_username">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="button_forgot_password">Lupa Password</string>
    <string name="button_login">Login</string>
    <string name="button_login_fingerprint">Masuk dengan Fingerprint</string>
    <string name="hint_for_register_account">Belum punya akun?</string>
    <string name="button_register_in_login">Daftar sekarang</string>
    <string name="hint_or">Atau</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>